footer + edit form pendaftaran

--- a/public/assets/user/css/style.css
+++ b/public/assets/user/css/style.css
@@ -73,13 +73,13 @@ p {
   background: #223a66;
 }
 
-input[type=email], input[type=password], input[type=text], input[type=tel] {
+input[type=email], input[type=password], input[type=text], input[type=tel], input[type=file], select[class=form-control] {
   box-shadow: none;
   height: 45px;
   outline: none;
-  font-size: 14px;
+  font-size: 16px;
 }
-input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, input[type=tel]:focus {
+input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, input[type=tel]:focus, input[type=file]:focus, select[class=form-control]:focus {
   box-shadow: none;
   border: 1px solid #223a66;
 }
@@ -664,7 +664,7 @@ a:focus {
   color: #223a66;
 }
 .feature-item p {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .feature-section.border-top {
