--- a/public/assets/user/css/style.css
+++ b/public/assets/user/css/style.css
@@ -842,7 +842,7 @@ a:focus {
   }
 }
 .cta {
-  background: url("../images/bg/bg-4.jpg") no-repeat 50% 50%;
+  background: url("../images/bg/bg-5.png") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
 }
